Feat. better error message

--- a/Syncr/sync/templates/sync/job/ajax/query.html
+++ b/Syncr/sync/templates/sync/job/ajax/query.html
@@ -1,6 +1,17 @@
 {% load custom_filters %}
-<div class="grid grid-cols-1 md:grid-cols-3 mb-4 gap-x-4 gap-y-4">
-    <figure class="rounded-lg col-span-3 flex flex-col p-2 bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
+<div class="grid grid-cols-1 md:grid-cols-6 mb-4 gap-x-4 gap-y-4">
+    {% if job.error %}
+    <figure class="rounded-lg col-span-6 flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
+        <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
+            <h3 class="text-lg font-semibold text-red-200">{{job.error}}</h3>
+            <div class="grid grid-cols-2">
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Errors: {{job.errors}}</h3>
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Fatal Error: {{job.fatalError}}</h3>
+            </div>
+        </blockquote>   
+    </figure>
+    {% endif %}
+    <figure class="rounded-lg col-span-6 flex flex-col p-2 bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
         <blockquote class="mb-2 text-gray-500 dark:text-gray-400">
             <div>
                 <h3 class="mb-2 text-lg font-semibold text-gray-900 dark:text-white">Job {{ job.id }} - {{ job.type }} - {{ job.schedule.name|default:"Manual" }} ({{ job.startTime|date:"d/m/y H:i" }})</h3>
@@ -23,7 +34,7 @@
                             {% if job.success %}
                             Succesful
                             {% else %}
-                            Failed
+                            <span class="text-red-200">Failed</span>
                             {% endif %}
                         {% else %}
                         Running ({{job.speed|divide:1000000|floatformat:2}} MB/s)
@@ -63,7 +74,7 @@
         </blockquote>   
     </figure>
 
-    <figure class="rounded-lg flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
+    <figure class="rounded-lg col-span-3 flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
         <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
             <p class="my-2">Transfers</p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
@@ -88,7 +99,7 @@
             {% endif %}
         </blockquote>   
     </figure>
-    <figure class="rounded-lg flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
+    <figure class="rounded-lg col-span-3 flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
         <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
             <p class="my-2">Changes</p>
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Renames: {{job.renames}}</h3>
@@ -96,17 +107,8 @@
             <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Deleted dirs: {{job.deletedDirs}}</h3>
         </blockquote>   
     </figure>
-    <figure class="rounded-lg flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
-        <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
-            <p class="my-2">Errors</p>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Errors: {{job.errors}}</h3>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">Fatal Error: {{job.fatalError}}</h3>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">{{job.output}}</h3>
-            <h3 class="text-lg font-semibold text-gray-900 dark:text-white">{{job.error}}</h3>
-        </blockquote>   
-    </figure>
 
-    <figure class="rounded-lg col-span-3 flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
+    <figure class="rounded-lg col-span-6 flex flex-col items-top p-2 text-center bg-white border-b border-gray-200  dark:bg-gray-800 dark:border-gray-700">
         <blockquote class="mx-auto mb-2 text-gray-500 dark:text-gray-400">
             <p class="my-2">Options</p>
             <div class="grid grid-cols-6">
