--- a/Syncr/accounts/templates/accounts/login.html
+++ b/Syncr/accounts/templates/accounts/login.html
@@ -1,10 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form method="post">
+<form action="" method="POST" class="max-w-sm mx-auto">
     {% csrf_token %}
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <button type="submit">Login</button>
+    <h1 class="block mt-2 text-xl fton-bold text-gray-900 dark:text-white">Login</h1>
+
+    <div class="mt-4">
+        <label for="username" class="block text-lg text-gray-900 dark:text-white">Username</label>
+        <input class="rounded-lg bg-gray-50 border border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+        type="text" name="username" placeholder="Username" required>
+    </div>
+
+    <div class="mt-4">
+        <label for="password" class="block text-lg text-gray-900 dark:text-white">Password</label>
+        <input class="rounded-lg bg-gray-50 border border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+        type="password" name="password" placeholder="Password" required>
+    </div>
+
+    <button type="submit" class="mt-2 hover:cursor-pointer text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">Login</button>
 </form>
 {% endblock content %}
