--- a/Syncr/templates/base.html
+++ b/Syncr/templates/base.html
@@ -58,6 +58,40 @@
           </li>
           {% endif %}
 
+
+          <li>
+            <button id="dropdownNotifications" data-dropdown-toggle="dropdownNotificationsMenu" class="text-sm p-2 text-center inline-flex items-center" type="button">
+              <li class="w-8 h-8">
+                <svg class="dark:fill-gray-200 dark:hover:fill-blue-500" 
+                data-slot="icon" aria-hidden="true" fill="currentColor" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+                  <path clip-rule="evenodd" d="M12 5a4 4 0 0 0-8 0v2.379a1.5 1.5 0 0 1-.44 1.06L2.294 9.707a1 1 0 0 0-.293.707V11a1 1 0 0 0 1 1h2a3 3 0 1 0 6 0h2a1 1 0 0 0 1-1v-.586a1 1 0 0 0-.293-.707L12.44 8.44A1.5 1.5 0 0 1 12 7.38V5Zm-5.5 7a1.5 1.5 0 0 0 3 0h-3Z" fill-rule="evenodd"></path>
+                </svg>
+              </li>
+            </button>
+            <div id="dropdownNotificationsMenu" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow-sm w-44 dark:bg-gray-700 dark:divide-gray-600">
+              <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
+                <h1>{{ unread_notifications.count }} unread notifications</h1>
+              </div>
+              <div class="px-4 py-3 text-sm text-gray-900 dark:text-white">
+                {% for notification in unread_notifications|slice:5 %}
+                    <a href="{{notification.url}}">
+                      <h1 class="my-2">{{ notification.message }}</h1>
+                    </a>
+                {% endfor %}
+                {% if unread_notifications.count > 5 %}
+                    <h1 class="my-2">... and {{ unread_notifications.count|add:"-5" }} more</h1>
+                {% endif %}
+                {% if unread_notifications.count == 0 %}
+                    <h1 class="my-2">No new notifications</h1>
+                {% endif %}
+              </div>
+              <div class="py-2">
+                <a href="{% url 'accounts:logout' %}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">View All</a>
+              </div>
+            </div>
+          </li>
+
+
           <li>
             <button id="dropdownAccount" data-dropdown-toggle="dropdownAccountMenu" class="text-sm p-2 text-center inline-flex items-center" type="button">
               <li class="w-8 h-8">
