Feat. Better messages + feedback via messages

--- a/Syncr/templates/base.html
+++ b/Syncr/templates/base.html
@@ -142,24 +142,42 @@
     </div>
     {% endif %}
   </nav>  
-
+  
   {% if messages %}
-    <div class="mx-auto text-lg text-center border rounded-lg max-w-xl my-4">
-      {% for message in messages %}
-        <p class="
-            {% if message.tags == 'success' %}text-green-300{% endif %}
-            {% if message.tags == 'error' %}text-red-300{% endif %}
-            {% if message.tags == 'warning' %}text-yellow-300{% endif %}
-            {% if message.tags == 'info' %}text-blue-300{% endif %}
-        ">
-            {{ message }}
-        </p>
+  <div class="mx-auto p-2 max-w-7xl">
+    {% for message in messages %}
+    <div id="alert-{{ forloop.counter }}" class="flex items-center p-4 mb-4 rounded-lg 
+    {% if message.tags == 'info' %}text-blue-800 bg-blue-50 dark:bg-gray-800 dark:text-blue-400{% endif %}
+    {% if message.tags == 'error' %}text-red-800 bg-red-50 dark:bg-gray-800 dark:text-red-400{% endif %}
+    {% if message.tags == 'success' %}text-green-800 bg-green-50 dark:bg-gray-800 dark:text-green-400{% endif %}
+    {% if message.tags == 'warning' %}text-yellow-800 bg-yellow-50 dark:bg-gray-800 dark:text-yellow-300{% endif %}
+    " role="alert">
+      <svg class="shrink-0 w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+        <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+      </svg>
+      <span class="sr-only">Info</span>
+      <div class="ms-3 text-sm font-medium">
+        {{message}}
+      </div>
+        <button type="button" class="ms-auto -mx-1.5 -my-1.5 focus:ring-2 rounded-lg p-1.5 inline-flex items-center justify-center h-8 w-8 dark:bg-gray-800 dark:hover:bg-gray-700
+        {% if message.tags == 'info' %}bg-blue-50 text-blue-500 focus:ring-blue-400 hover:bg-blue-200 dark:text-blue-400{% endif %}
+        {% if message.tags == 'error' %}bg-red-50 text-red-500 focus:ring-red-400 hover:bg-red-200 dark:text-red-400{% endif %}
+        {% if message.tags == 'success' %}bg-green-50 text-green-500 focus:ring-green-400 hover:bg-green-200 dark:text-green-400{% endif %}
+        {% if message.tags == 'warning' %}bg-yellow-50 text-yellow-500 focus:ring-yellow-400 hover:bg-yellow-200 dark:text-yellow-300{% endif %}
+        " data-dismiss-target="#alert-{{ forloop.counter }}" aria-label="Close">
+          <span class="sr-only">Close</span>
+          <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+          </svg>
+      </button>
+    </div>
     {% endfor %}
-    </div>
-{% endif %}
-    <div class="mx-auto p-2 max-w-7xl">
-        {% block content %}{% endblock content %}
-    </div>
+  </div>
+  {% endif %}
+
+  <div class="mx-auto p-2 max-w-7xl">
+      {% block content %}{% endblock content %}
+  </div>
 </body>
 {% block scripts_body %}{% endblock scripts_body %}
 </html>
